fix infobox horizontal align

--- a/src/components/Infobox/Infobox.css
+++ b/src/components/Infobox/Infobox.css
@@ -7,7 +7,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin: 20px calc((1440px - 1055px)/2);
+  margin: 20px calc((100% - 1055px)/2 );
 }
 
 .infobox__content{
@@ -21,6 +21,14 @@
   border: 2px black solid;
   border-radius: 10px;
   border-inline: solid grey 6px;
-
   grid-area: 1 / 1 / 4 / 1;
+}
+
+.infobox__date {
+  grid-area: 4 / 1 / 5 / 1;
+  font-family: 'Roboto', Arial, sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  color: rgb(113, 94, 162);
+  margin-left: 10px;
 }
